feat: implemented export functionality

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@tiptap/extension-underline": "^3.0.9",
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
+    "@types/file-saver": "^2.0.7",
     "classnames": "^2.5.1",
+    "file-saver": "^2.0.5",
     "html-to-docx": "^1.8.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.536.0",
